--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
+    "jest": "^23.5.0",
     "live-server": "^1.2.0",
+    "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "^7.0.0",
     "react": "16.0.0",
+    "react-addons-shallow-compare": "15.6.0",
+    "react-dates": "12.7.0",
     "react-dom": "^16.0.0",
     "react-modal": "2.2.2",
     "react-redux": "^5.0.6",
@@ -32,14 +37,15 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "test": "jest --watch"
   },
   "standard": {
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "env": [ "jest" ]
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "standard": "^10.0.3"
   }
 }
