--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "jest": "^23.5.0",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "^7.0.0",
+    "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
@@ -26,6 +30,7 @@
     "react-modal": "2.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
+    "react-test-renderer": "^16.4.2",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "^0.19.0",
@@ -38,7 +43,7 @@
     "serve": "live-server public/",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "test": "jest --watch"
+    "test": "jest --config=jest.config.json"
   },
   "standard": {
     "parser": "babel-eslint",
