--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
   },
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
-    "dev": "webpack-dev-server",
+    "build:dev": "webpack ",
+    "build:prod": "webpack -p --env production",
+    "dev:serve": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
   "standard": {
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "standard": "^12.0.1"
   }
 }
