--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "express": "^4.16.4",
     "jest": "^23.5.0",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
@@ -40,6 +41,8 @@
     "webpack-dev-server": "2.5.1"
   },
   "scripts": {
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod",
     "serve": "live-server public/",
     "build:dev": "webpack ",
     "build:prod": "webpack -p --env production",
