--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,7 @@ build.zip
 .DS_Store
 .env
 npm-debug.log
-public/*
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
