Setup dev dependencies and dist folder

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,4 @@ build.zip
 .DS_Store
 .env
 npm-debug.log
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist/
