--- a/package.json
+++ b/package.json
@@ -14,12 +14,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "^4.16.4",
-    "jest": "^23.5.0",
-    "live-server": "^1.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "^7.0.0",
@@ -31,19 +27,16 @@
     "react-modal": "2.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "^16.4.2",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "^0.19.0",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "scripts": {
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod",
-    "serve": "live-server public/",
     "build:dev": "webpack ",
     "build:prod": "webpack -p --env production",
     "dev:serve": "webpack-dev-server",
@@ -57,7 +50,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "standard": "^12.0.1"
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "^23.5.0",
+    "react-test-renderer": "^16.4.2",   
+    "standard": "^12.0.1",
+    "webpack-dev-server": "2.5.1"
   }
 }
